exercicio ex 27-05 adicionado

--- a/Google/google.css
+++ b/Google/google.css
@@ -67,7 +67,7 @@ a:hover{
     background-color: #303134; 
     color: white;
     padding: 10px;
-   border: ;
+    border: none;
     margin: 7px;
    
 
